--- a/service/user/api/etc/user-api.yaml
+++ b/service/user/api/etc/user-api.yaml
@@ -4,3 +4,8 @@ Port: 8888
 Auth:
   AccessSecret: 1e69481b-7405-4369-9ce3-9aaffdb56ce3
   AccessExpire: 3600
+Mysql:
+  DataSource: ugozero@tcp(127.0.0.1:3306)/heygozero?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
+CacheRedis:
+  - Host: 127.0.0.1:6379
+    Type: node
