--- a/service/course/api/etc/course-api.yaml
+++ b/service/course/api/etc/course-api.yaml
@@ -1,8 +1,11 @@
 Name: course-api
 Host: 0.0.0.0
-Port: 8888
+Port: 8889
+Auth:
+  AccessSecret: 1e69481b-7405-4369-9ce3-9aaffdb56ce3
+  AccessExpire: 3600
 Mysql:
   DataSource: ugozero@tcp(127.0.0.1:3306)/heygozero?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
-  CacheRedis:
-    - Host: 127.0.0.1:6379
-      Type: node
+CacheRedis:
+  - Host: 127.0.0.1:6379
+    Type: node
