--- a/service/selection/api/etc/selection-api.yaml
+++ b/service/selection/api/etc/selection-api.yaml
@@ -1,36 +1,36 @@
 Name: selection-api
 Host: 0.0.0.0
-Port: 8890
+Port: 1004
 Auth:
   AccessSecret: 1e69481b-7405-4369-9ce3-9aaffdb56ce3
   AccessExpire: 3600
 Mysql:
-  DataSource: ugozero@tcp(127.0.0.1:3306)/heygozero?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
+  DataSource: ugozero:Qq111111..@tcp(172.16.100.135:3306)/heygozero?charset=utf8mb4&parseTime=true&loc=Asia%2FShanghai
 CacheRedis:
   -
-    Host: 127.0.0.1:6379
+    Host: 172.16.100.135:6379
     Type: node
 BizRedis:
-  Host: 127.0.0.1:6379
+  Host: 172.16.100.135:6379
   Type: node
   Weight: 100
 UserRpc:
   Etcd:
     Hosts:
-      - 127.0.0.1:2379
+      - 172.16.100.135:2379
     Key: user.rpc
 CourseRpc:
   Etcd:
     Hosts:
-      - 127.0.0.1:2379
+      - 172.16.100.135:2379
     Key: course.rpc
 Dq:
   Beanstalks:
     -
-      Endpoint: 127.0.0.1:11300
+      Endpoint: 172.16.100.135:11300
       Tube: course_select
-    - Endpoint: 127.0.0.1:11301
+    - Endpoint: 172.16.100.135:11301
       Tube: course_select
   Redis:
-    Host: 127.0.0.1:6379
+    Host: 172.16.100.135:6379
     Type: node
